@@ -77,7 +77,6 @@ class Mapp:
 
 
 
-
 def test_logoff(mapp):
     mapp.login()
     mapp.logoff()
